fixed text, alignment

--- a/src/app/containers/Home/stylesheets/Home.scss
+++ b/src/app/containers/Home/stylesheets/Home.scss
@@ -38,7 +38,7 @@ $introTextColor: #5f5555;
 }
 
 a.social {
-  margin-right: 10px;
+  padding: 0px 10px;
 
   &.linkBlack {
     color: black;
